--- a/src/main/resources/templates/MonitorPage.html
+++ b/src/main/resources/templates/MonitorPage.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="MonitorStyle.css">
+    <link rel="stylesheet" href="MonitorTopStyle.css">
+    <link rel="stylesheet" href="MonitorBottomStyle.css">
 </head>
 <body>
-
+    <div class="Top">
+        
+        <div class="currentPrice">
+            <h1>Current Price</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Symbol</th>
+                        <th>USD</th>
+                        <th>GBP</th>
+                        <th>EUR</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>1</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="Bottom">
+        <div class="graph">
+            hello
+        </div>
+    </div>
 </body>
 </html>
