--- a/src/main/resources/public/MonitorBottomStyle.css
+++ b/src/main/resources/public/MonitorBottomStyle.css
@@ -2,8 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: fit-content;
 }
 
 .graph {
     border: 2px solid white;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 2 / 1;
 }
