--- a/src/main/resources/static/MonitorBottomStyle.css
+++ b/src/main/resources/static/MonitorBottomStyle.css
@@ -1,11 +1,15 @@
 .Bottom {
-    width: 75vw;
+    width: 70vw;
+    height: auto;
 }
 
 .graphContainer {
-    display: flex;
-    justify-content: center;
     border: 2px solid white;
+    width: 100%;
+    height: 100%;
+}
+
+#graph {
     width: 100%;
     height: 100%;
 }
